# cpp_enigma

./: .gitignore  .gitignore.bak  CMakeLists.txt  Drum.cpp  Drum.h  DrumAssembly.cpp  DrumAssembly.h  DrumAssemblyK.cpp  DrumAssemblyK.h  Gui.cpp  GuiFrame.cpp  GuiFrame.h  GuiLogic.h  GuiPanel.h  Machine.cpp  Machine.h  Plugboard.cpp  Plugboard.h  README.md  glad.c  main.cpp
ImGUI/: imgui_stdlib.cpp  imgui_stdlib.h
include/glad/: glad.h
old/: Gui.cpp  Gui.h  GuiFrame.cpp  GuiFrame.h  GuiLogic.cpp  GuiPanel.cpp
res/: drums.cfg
